solved all code warnings